--- a/html/phukien.html
+++ b/html/phukien.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="script.js"></script>
 </head>
-<div id="wrapper">
+<div id="container">
     <header>
         <div id="logo">
             <a href="../index.html" >
